Upgrade Spring Boot to v3
https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-3.0-Migration-Guide

*Note this requires moving to Java 17*

Had to convert old javax.servlet packages to jakarta.servlet packages.
Used
https://docs.openrewrite.org/recipes/java/migrate/jakarta/javaxmigrationtojakarta.
Mostly just simple javax -> jakarta replacement in package names but in
addition:
- Had to add jakarta.xml.bind:jakarta.xml.bind-api dependency in pom.
- Had to alter call to  ServletRequest.getRealPath (deprecated) to
  ServletContext.getRealPath
  https://docs.oracle.com/javaee/6/api/javax/servlet/ServletRequest.html#getRealPath(java.lang.String)

Also updated some apache.httpcomponents to client5 but there is still
some commons-httpclient v3.1 code left in ProxyRedirect[2] which will
need more careful re-writing.